--- a/api-tests/src/test/resources/env-api.properties
+++ b/api-tests/src/test/resources/env-api.properties
@@ -5,6 +5,7 @@ USER_PSW=123456
 DB_USER=example
 DB_PSW=123456
 DB_URL=jdbc:mysql://example.com/schemaName?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
+URL=https://fakerestapi.azurewebsites.net
 ########################################################################################################################################
 #  NOTE:
 #
