added security tests

--- a/api-tests/src/test/resources/env-api.properties
+++ b/api-tests/src/test/resources/env-api.properties
@@ -5,7 +5,10 @@ USER_PSW=123456
 DB_USER=example
 DB_PSW=123456
 DB_URL=jdbc:mysql://example.com/schemaName?useSSL=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
-URL=https://fakerestapi.azurewebsites.net
+#URL=https://fakerestapi.azurewebsites.net
+URL=https://test-api.k6.io/
+MAIN_USER=VericaHtec
+PASSWORD=test123
 ########################################################################################################################################
 #  NOTE:
 #
