--- a/e2e/src/test/resources/env-e2e.properties
+++ b/e2e/src/test/resources/env-e2e.properties
@@ -1,5 +1,5 @@
-ADMIN=admin@example.com
-ADMIN_PSW=123456
+ADMIN=test.test1@q.com
+ADMIN_PSW=aaaaaa111
 USER=user@example.com
 USER_PSW=123456
 BROWSERSTACK_USERNAME=
